--- a/magazine/index.html
+++ b/magazine/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
     </head>
     <body>
 
@@ -25,10 +26,10 @@
 <header>
 </header>
   <section>
-    <h1>Readers Digest</h1>
+    <h1 class="title">Readers Digest</h1>
   </section>
   <section>
-    <h1>50 SECRETS NURSES WONT TELL YOU <span>PAGE 132</span></h1>
+    <h1 class="title">50 SECRETS<br>NURSES<br>WON'T TELL YOU <span>PAGE 132</span></h1>
   </section>
   <section class="articles simple">
     <div>
@@ -41,12 +42,11 @@
     </div>
   </section>
   <section class="articles barcode">
-    <div>
+    <div class="part1">
       <p>Plus<br>Humor, Inspiration,<br>Great Reads, and<br>10 Essential<br>Turkey Day Tips
       </p>
     </div>
-    <div>
-    November<br>2011<br>$3.99
+    <div class="bottomright">November<br>2011<br>$3.99<br><img class="rotate" src="http://i.stack.imgur.com/NzXvM.gif" height="100" height="250">
     </div>
   </section>
 <footer>
