--- a/teenempowerment/index.html
+++ b/teenempowerment/index.html
@@ -1,6 +1,6 @@
 <header>
   <div>
-    <img src="https://lh6.googleusercontent.com/-drnQJcLf1J4/U3pC_S3lKSI/AAAAAAAAAKs/MuDxpG8X_Fc/w750-h446-no/te-logo-hi-res_rgb_300dpi-2.jpg">
+    <img src="img/logo_white.png">
   </div>
   <ul>
     <li><a href="#">HOME</a></li>
@@ -17,3 +17,83 @@
     <li><a href="#">Rochester</a></li>
   </ul>
 </header>
+<section>
+  <div>
+    <img src="img/img6.jpg">
+  </div>
+  <div>
+    <h3>ABOUT</h3>
+    <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.</p>
+  </div>
+  <span>Learn More</span>
+</section>
+<section>
+  <div>
+    <h3>FEATURED STORIES</h3>
+  </div>
+  <div>
+    <img src="img/img5.jpg"
+  </div>
+  <div>
+    <img src="img/img4.jpg"
+  </div>
+  <div>
+    <img src="img/img3.jpg"
+  </div>
+</section>
+<section>
+  <div>
+    <h3>NEWS &amp; EVENTS</h3>
+  </div>
+  <ul>
+    <li>
+      <div>
+        <h5>MAY</h5>
+        <h6>27|16</h6>
+      </div>
+      <div>
+        <h5>CELEBRATION OF HOPE &amp; CARING</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
+      </div>
+    </li>
+    <li>
+      <div>
+        <h5>JUN</h5>
+        <h6>12|16</h6>
+      </div>
+      <div>
+        <h5>YOUTH PEACE CONFERENCE 2015</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
+      </div>
+    </li>
+    <li>
+      <div>
+        <h5>AUG</h5>
+        <h6>05|16</h6>
+      </div>
+      <div>
+        <h5>ROCHESTER COMMUNITY LUNCHEON 2015</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
+      </div>
+    </li>
+    <li>
+      <div>
+        <h5>AUG</h5>
+        <H6>14|16</h6>
+      </div>
+      <div>
+        <h5>TE@20 SHOWCASE</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
+      </div>
+    </li>
+    <li>
+      <div>
+        <h5>SEP</h5>
+        <h6>23|16</h6>
+      </div>
+      <div>
+        <h5>ROCHESTER GRAND OPENING</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
+      </div>
+    </li>
+</section>
