--- a/teenempowerment/index.html
+++ b/teenempowerment/index.html
@@ -1,44 +1,57 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+  </head>
+  <body>
+
+  </body>
+</html>
 <header>
-  <div>
+  <div class="logo">
     <img src="img/logo_white.png">
   </div>
-  <ul>
-    <li><a href="#">HOME</a></li>
-    <li><a href="#">ABOUT</a></li>
-    <li><a href="#">CONTACT</a></li>
-    <li><a href="#">BLOG</a></li>
-    <li><a href="#">DONATE</a></li>
-  </ul>
+  <div class="navdiv">
+    <ul class="nav1">
+      <li><a href="#">HOME</a></li>
+      <li><a href="#">ABOUT</a></li>
+      <li><a href="#">CONTACT</a></li>
+      <li><a href="#">BLOG</a></li>
+      <li><a href="#">DONATE</a></li>
+    </ul>
+  </div>
   <h1>CENTER OF<br>TEEN EMPOWERMENT</h1>
   <h3>EMPOWERING YOUTH-LED SOCIAL CHANGE</h3>
-  <ul>
+  <ul class="nav2">
     <li><a href="#">Boston</a></li>
     <li><a href="#">Somerville</a></li>
     <li><a href="#">Rochester</a></li>
   </ul>
 </header>
-<section>
-  <div>
-    <img src="img/img6.jpg">
+<section class="categories about">
+  <div class="pic about">
+    <img src="img/img7.jpg">
   </div>
   <div>
     <h3>ABOUT</h3>
     <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.</p>
+    <span>Learn More</span>
   </div>
-  <span>Learn More</span>
 </section>
-<section>
-  <div>
-    <h3>FEATURED STORIES</h3>
+<div>
+  <h3>FEATURED STORIES</h3>
+</div>
+<section class="categories stories">
+  <div class="pic">
+    <img src="img/img5.jpg">
   </div>
-  <div>
-    <img src="img/img5.jpg"
+  <div class="pic">
+    <img src="img/img4.jpg">
   </div>
-  <div>
-    <img src="img/img4.jpg"
-  </div>
-  <div>
-    <img src="img/img3.jpg"
+  <div class="pic">
+    <img src="img/img3.jpg">
   </div>
 </section>
 <section>
