pushed up all my work

--- a/teenempowerment/index.html
+++ b/teenempowerment/index.html
@@ -21,11 +21,13 @@
   </div>
   <h1>CENTER OF<br>TEEN EMPOWERMENT</h1>
   <h3>EMPOWERING YOUTH-LED SOCIAL CHANGE</h3>
-  <ul class="nav2">
-    <li><a href="#">Boston</a></li>
-    <li><a href="#">Somerville</a></li>
-    <li><a href="#">Rochester</a></li>
-  </ul>
+  <div>
+    <ul>
+      <li class="nav2"><a href="#">Boston</a></li>
+      <li class="nav2"><a href="#">Somerville</a></li>
+      <li class="nav2"><a href="#">Rochester</a></li>
+    </ul>
+  </div>
 </header>
 <section class="categories about">
   <div class="pic about">
@@ -55,14 +57,14 @@
   <div>
     <h3>NEWS &amp; EVENTS</h3>
   </div>
-  <ul>
+  <ul class="list">
     <li>
       <div>
         <h5>MAY</h5>
         <h6>27|16</h6>
       </div>
       <div>
-        <h5>CELEBRATION OF HOPE &amp; CARING</h5>
+        <h4>CELEBRATION OF HOPE &amp; CARING</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
       </div>
     </li>
@@ -72,7 +74,7 @@
         <h6>12|16</h6>
       </div>
       <div>
-        <h5>YOUTH PEACE CONFERENCE 2015</h5>
+        <h4>YOUTH PEACE CONFERENCE 2015</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
       </div>
     </li>
@@ -82,7 +84,7 @@
         <h6>05|16</h6>
       </div>
       <div>
-        <h5>ROCHESTER COMMUNITY LUNCHEON 2015</h5>
+        <h4>ROCHESTER COMMUNITY LUNCHEON 2015</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
       </div>
     </li>
@@ -92,7 +94,7 @@
         <H6>14|16</h6>
       </div>
       <div>
-        <h5>TE@20 SHOWCASE</h5>
+        <h4>TE@20 SHOWCASE</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
       </div>
     </li>
@@ -102,10 +104,14 @@
         <h6>23|16</h6>
       </div>
       <div>
-        <h5>ROCHESTER GRAND OPENING</h5>
+        <h4>ROCHESTER GRAND OPENING</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
       </div>
     </li>
 </section>
+<footer>
+  <h5>TEEN EMPOWERMENT</h5>
+  <p>Boston, MA  Somerville, MA  Rochester, NY</p>
+</footer>
 </body>
 </html>
